[gd_scene load_steps=22 format=3 uid="uid://bbqvyyfi5ti6i"]

[ext_resource type="Script" path="res://Scripts/Screens/settings.gd" id="1_3p1sp"]
[ext_resource type="Texture2D" uid="uid://bvesj6vgcs4vs" path="res://Assets/Textures/SettingsBackground.png" id="1_3734h"]
[ext_resource type="PackedScene" uid="uid://u8ibfy4bbtis" path="res://Scenes/Buttons/base_button.tscn" id="2_16bkd"]
[ext_resource type="Texture2D" uid="uid://ca45oqfhygqes" path="res://Assets/Textures/Buttons/BackBTN.png" id="3_1pvv8"]
[ext_resource type="LabelSettings" uid="uid://d4hgn1jb18o14" path="res://Assets/Fonts/SettingsLabel.tres" id="4_ga0pj"]
[ext_resource type="PackedScene" uid="uid://c6854i3bqfr33" path="res://Scenes/audio_slider.tscn" id="4_ggo6t"]
[ext_resource type="Theme" uid="uid://c6xvew4dmwq30" path="res://themes/SettingSlider.tres" id="6_2m5ep"]
[ext_resource type="Texture2D" uid="uid://bnvc3ojuckkpb" path="res://Assets/Textures/Buttons/Settings/VolumeSliderGrabber.png" id="7_mni8v"]
[ext_resource type="Texture2D" uid="uid://c2w0gt4m4vboq" path="res://Assets/Textures/Buttons/Settings/UnCheckedButton.png" id="8_2lxv1"]
[ext_resource type="Texture2D" uid="uid://ho7bxmnp7m3a" path="res://Assets/Textures/Buttons/Settings/UnCheckedButtonPressed.png" id="9_n1s4r"]

[sub_resource type="LabelSettings" id="LabelSettings_pamkg"]
font_size = 120
font_color = Color(0.223529, 0.223529, 0.223529, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_fgt7n"]
font_size = 120

[sub_resource type="StyleBoxLine" id="StyleBoxLine_6rfuh"]
color = Color(0.239216, 0.239216, 0.239216, 1)
thickness = 8

[sub_resource type="StyleBoxLine" id="StyleBoxLine_8rrw5"]
color = Color(0.0431373, 0.278431, 1, 1)
thickness = 8

[sub_resource type="StyleBoxLine" id="StyleBoxLine_s8g7p"]
color = Color(0.0431373, 0.278431, 1, 1)
thickness = 8

[sub_resource type="StyleBoxLine" id="StyleBoxLine_ap2xb"]
color = Color(0.239216, 0.239216, 0.239216, 1)
thickness = 8

[sub_resource type="StyleBoxLine" id="StyleBoxLine_08d8r"]
color = Color(0.0431373, 0.278431, 1, 1)
thickness = 8

[sub_resource type="StyleBoxLine" id="StyleBoxLine_tmlvp"]
color = Color(0.0431373, 0.278431, 1, 1)
thickness = 8

[sub_resource type="StyleBoxLine" id="StyleBoxLine_hcr6v"]
color = Color(0.239216, 0.239216, 0.239216, 1)
thickness = 9

[sub_resource type="StyleBoxLine" id="StyleBoxLine_4h1y1"]
color = Color(0.0431373, 0.278431, 1, 1)
thickness = 8

[sub_resource type="StyleBoxLine" id="StyleBoxLine_gvi60"]
color = Color(0.0431373, 0.278431, 1, 1)
thickness = 8

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3p1sp")

[node name="SettingsBG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.65098, 0.792157, 1, 0.623529)

[node name="SettingsTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -416.0
offset_top = -283.0
offset_right = 416.0
offset_bottom = 283.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_3734h")
expand_mode = 1
stretch_mode = 4

[node name="SettingsLabel" type="Label" parent="SettingsTexture"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -276.0
offset_top = -9.0
offset_right = 277.0
offset_bottom = 159.0
grow_horizontal = 2
text = "SETTINGS"
label_settings = SubResource("LabelSettings_pamkg")
horizontal_alignment = 1

[node name="Label" type="Label" parent="SettingsTexture/SettingsLabel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -282.5
offset_top = -7.0
offset_right = 270.5
offset_bottom = 161.0
grow_horizontal = 2
text = "SETTINGS"
label_settings = SubResource("LabelSettings_fgt7n")
horizontal_alignment = 1

[node name="SettingBackButton" parent="SettingsTexture" instance=ExtResource("2_16bkd")]
layout_mode = 0
offset_left = 17.0
offset_top = 20.0
offset_right = 105.0
offset_bottom = 108.0
texture_normal = ExtResource("3_1pvv8")
ignore_texture_size = true
stretch_mode = 0

[node name="MusicVolumeLabel" type="Label" parent="SettingsTexture"]
layout_mode = 0
offset_left = 29.0
offset_top = 156.0
offset_right = 240.0
offset_bottom = 205.0
text = "Music Volume:"
label_settings = ExtResource("4_ga0pj")

[node name="MusicSlider" parent="SettingsTexture/MusicVolumeLabel" instance=ExtResource("4_ggo6t")]
layout_mode = 0
offset_left = 113.0
offset_top = -4.0
offset_right = 552.0
offset_bottom = 31.0
theme_override_styles/slider = SubResource("StyleBoxLine_6rfuh")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_8rrw5")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_s8g7p")
max_value = 0.8
step = 0.001
audio_bus_name = "Music"

[node name="SoundVolumeLabel" type="Label" parent="SettingsTexture"]
layout_mode = 0
offset_left = 29.0
offset_top = 211.0
offset_right = 247.0
offset_bottom = 260.0
text = "Sound Volume:"
label_settings = ExtResource("4_ga0pj")

[node name="MusicSlider" parent="SettingsTexture/SoundVolumeLabel" instance=ExtResource("4_ggo6t")]
layout_mode = 0
offset_left = 117.0
offset_top = -4.0
offset_right = 556.0
offset_bottom = 31.0
theme_override_styles/slider = SubResource("StyleBoxLine_ap2xb")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_08d8r")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_tmlvp")
max_value = 4.0
step = 0.001
audio_bus_name = "SoundFX"

[node name="TextSizeLabel" type="Label" parent="SettingsTexture"]
layout_mode = 0
offset_left = 28.0
offset_top = 265.0
offset_right = 163.0
offset_bottom = 307.0
text = "Text Size:"
label_settings = ExtResource("4_ga0pj")

[node name="TextSizeSlider" type="HSlider" parent="SettingsTexture/TextSizeLabel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 6.5
offset_top = -25.0
offset_right = 445.5
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_2m5ep")
theme_override_icons/grabber = ExtResource("7_mni8v")
theme_override_icons/grabber_highlight = ExtResource("7_mni8v")
theme_override_icons/grabber_disabled = ExtResource("7_mni8v")
theme_override_styles/slider = SubResource("StyleBoxLine_hcr6v")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_4h1y1")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_gvi60")

[node name="TextToSpeechBox" type="Label" parent="SettingsTexture"]
layout_mode = 0
offset_left = 27.0
offset_top = 319.0
offset_right = 257.0
offset_bottom = 361.0
text = "Text-To-Speech:"
label_settings = ExtResource("4_ga0pj")

[node name="TextToSpeechButton" type="TextureButton" parent="SettingsTexture/TextToSpeechBox"]
layout_mode = 0
offset_left = 118.0
offset_top = -5.0
offset_right = 152.0
offset_bottom = 30.0
texture_normal = ExtResource("8_2lxv1")
texture_pressed = ExtResource("9_n1s4r")
ignore_texture_size = true
stretch_mode = 4

[connection signal="pressed" from="SettingsTexture/TextToSpeechBox/TextToSpeechButton" to="." method="_on_texture_button_pressed"]
